--- a/CuidooApp/Mom/Storyboards/Search.storyboard
+++ b/CuidooApp/Mom/Storyboards/Search.storyboard
@@ -16,16 +16,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jXd-NC-Slu">
-                                <rect key="frame" x="0.0" y="88" width="414" height="676"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="684"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udh-b3-wUc">
-                                <rect key="frame" x="0.0" y="764" width="414" height="98"/>
+                                <rect key="frame" x="0.0" y="772" width="414" height="90"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z5-u0-nMU">
-                                        <rect key="frame" x="18" y="48" width="378" height="50"/>
+                                        <rect key="frame" x="18" y="16" width="378" height="58"/>
                                         <color key="backgroundColor" red="0.99824029209999998" green="0.39281293750000001" blue="0.39213877920000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="m1S-qX-ZXw"/>
+                                            <constraint firstAttribute="height" constant="58" id="wiZ-RG-ARj"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="Buscar">
@@ -40,19 +40,11 @@
                                             <action selector="searchButton:" destination="ln4-Yv-ycu" eventType="touchUpInside" id="Zz0-YE-6cy"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forma de pagamento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgS-UQ-EXU">
-                                        <rect key="frame" x="18" y="13.5" width="163.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="9z5-u0-nMU" firstAttribute="top" secondItem="udh-b3-wUc" secondAttribute="top" constant="16" id="05C-Al-3dl"/>
                                     <constraint firstItem="9z5-u0-nMU" firstAttribute="leading" secondItem="udh-b3-wUc" secondAttribute="leading" constant="18" id="Fqv-1T-iPc"/>
-                                    <constraint firstAttribute="bottom" secondItem="9z5-u0-nMU" secondAttribute="bottom" id="GbI-RC-klb"/>
-                                    <constraint firstAttribute="height" constant="98" id="NOw-km-mtI"/>
-                                    <constraint firstItem="9z5-u0-nMU" firstAttribute="top" secondItem="mgS-UQ-EXU" secondAttribute="bottom" constant="14" id="XpX-U0-PxV"/>
-                                    <constraint firstItem="mgS-UQ-EXU" firstAttribute="leading" secondItem="udh-b3-wUc" secondAttribute="leading" constant="18" id="aeC-zt-d84"/>
+                                    <constraint firstAttribute="bottom" secondItem="9z5-u0-nMU" secondAttribute="bottom" constant="16" id="GbI-RC-klb"/>
                                     <constraint firstAttribute="trailing" secondItem="9z5-u0-nMU" secondAttribute="trailing" constant="18" id="l2f-qS-apj"/>
                                 </constraints>
                             </view>
