Tree profile Mom [DESIGN DONE]

--- a/CuidooApp/Mom/Storyboards/Profile.storyboard
+++ b/CuidooApp/Mom/Storyboards/Profile.storyboard
@@ -218,7 +218,9 @@
                             <outlet property="delegate" destination="JiP-1q-4rA" id="Vwm-sc-0iu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Sandra Castelo Branco" id="zE3-kW-Iwl"/>
+                    <navigationItem key="navigationItem" title="Sandra Castelo Branco" id="zE3-kW-Iwl">
+                        <barButtonItem key="backBarButtonItem" title=" " id="rAr-ow-Vdp"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="nameLabel" destination="ACm-t6-ugi" id="NsY-hK-wAJ"/>
