--- a/CuidooApp/Mom/Storyboards/Config.storyboard
+++ b/CuidooApp/Mom/Storyboards/Config.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Configuration View Controller-->
+        <!--Configurações-->
         <scene sceneID="QXq-hv-TSD">
             <objects>
                 <tableViewController id="Lea-3H-pOs" customClass="ConfigurationViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,48 +15,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <sections>
-                            <tableViewSection id="RXs-p3-wIC">
+                            <tableViewSection headerTitle="" id="RXs-p3-wIC">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="uwN-Vy-ejm">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="60" id="uwN-Vy-ejm">
                                         <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uwN-Vy-ejm" id="ffr-XN-Zg6">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uwN-Vy-ejm" id="ffr-XN-Zg6">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kwg-gr-gKH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kwg-gr-gKH">
+                                                    <rect key="frame" x="0.0" y="7" width="414" height="46"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ativar notificações" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7H4-et-2el">
-                                                            <rect key="frame" x="55" y="12" width="142" height="29"/>
+                                                            <rect key="frame" x="65" y="16" width="142" height="22"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="bell" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="suJ-Mv-KhA">
-                                                            <rect key="frame" x="16" y="15" width="24" height="22.5"/>
+                                                            <rect key="frame" x="15" y="16" width="31" height="22"/>
                                                             <color key="tintColor" red="1" green="0.38701313729999998" blue="0.3767012656" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" secondItem="suJ-Mv-KhA" secondAttribute="height" multiplier="24:23" id="J4m-ln-Jlm"/>
-                                                                <constraint firstAttribute="width" constant="24" id="biV-TY-OG8"/>
-                                                                <constraint firstAttribute="height" constant="23" id="ipP-Ut-zRE"/>
+                                                                <constraint firstAttribute="width" constant="31" id="biV-TY-OG8"/>
+                                                                <constraint firstAttribute="height" constant="22.5" id="ipP-Ut-zRE"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4fk-xq-YD9">
-                                                            <rect key="frame" x="349" y="7" width="51" height="39"/>
+                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4fk-xq-YD9">
+                                                            <rect key="frame" x="349" y="11" width="51" height="32"/>
                                                         </switch>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="4fk-xq-YD9" secondAttribute="trailing" constant="16" id="4JL-Vy-vrD"/>
-                                                        <constraint firstItem="suJ-Mv-KhA" firstAttribute="leading" secondItem="kwg-gr-gKH" secondAttribute="leading" constant="16" id="E5p-2o-rPv"/>
-                                                        <constraint firstItem="7H4-et-2el" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="12" id="FMD-f7-keL"/>
-                                                        <constraint firstAttribute="bottom" secondItem="4fk-xq-YD9" secondAttribute="bottom" constant="7" id="cbR-aN-sZB"/>
-                                                        <constraint firstAttribute="bottom" secondItem="7H4-et-2el" secondAttribute="bottom" constant="12" id="fUp-kc-Yx0"/>
-                                                        <constraint firstItem="7H4-et-2el" firstAttribute="leading" secondItem="suJ-Mv-KhA" secondAttribute="trailing" constant="15" id="nTE-0s-tRU"/>
-                                                        <constraint firstItem="4fk-xq-YD9" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="7" id="rPk-mc-hca"/>
-                                                        <constraint firstItem="suJ-Mv-KhA" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="15" id="y5g-90-RhF"/>
-                                                        <constraint firstAttribute="bottom" secondItem="suJ-Mv-KhA" secondAttribute="bottom" constant="15" id="zkk-YH-5z7"/>
+                                                        <constraint firstItem="7H4-et-2el" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="16" id="FMD-f7-keL"/>
+                                                        <constraint firstItem="suJ-Mv-KhA" firstAttribute="leading" secondItem="kwg-gr-gKH" secondAttribute="leading" constant="15" id="PAP-Pr-zLa"/>
+                                                        <constraint firstItem="7H4-et-2el" firstAttribute="leading" secondItem="suJ-Mv-KhA" secondAttribute="trailing" constant="19" id="Thm-bj-ZqV"/>
+                                                        <constraint firstAttribute="bottom" secondItem="suJ-Mv-KhA" secondAttribute="bottom" constant="7.5" id="Y3s-wf-fyD"/>
+                                                        <constraint firstAttribute="bottom" secondItem="4fk-xq-YD9" secondAttribute="bottom" constant="3" id="cbR-aN-sZB"/>
+                                                        <constraint firstAttribute="bottom" secondItem="7H4-et-2el" secondAttribute="bottom" constant="8" id="fUp-kc-Yx0"/>
+                                                        <constraint firstItem="4fk-xq-YD9" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="11" id="rPk-mc-hca"/>
+                                                        <constraint firstItem="suJ-Mv-KhA" firstAttribute="top" secondItem="kwg-gr-gKH" secondAttribute="top" constant="16" id="tqF-JT-xde"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -69,8 +68,16 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="671" id="5ii-9r-bDx">
+                                        <rect key="frame" x="0.0" y="88" width="414" height="671"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5ii-9r-bDx" id="0JI-Ot-O1P">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="qJd-mL-gtK">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="45.5"/>
+                                        <rect key="frame" x="0.0" y="759" width="414" height="45.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qJd-mL-gtK" id="sKp-uF-h3T">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="45.5"/>
@@ -105,6 +112,9 @@
                             <outlet property="delegate" destination="Lea-3H-pOs" id="XhW-Ls-yMp"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Configurações" id="mWl-rw-BLB">
+                        <barButtonItem key="backBarButtonItem" title=" " id="Htw-54-mdt"/>
+                    </navigationItem>
                     <connections>
                         <segue destination="3Kk-Tn-9pK" kind="unwind" identifier="goToAuthSegue" unwindAction="backToAuthScreenUnwind:" id="r9x-vX-JQM"/>
                     </connections>
@@ -112,7 +122,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XjA-C9-S6W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="3Kk-Tn-9pK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="755" y="42"/>
+            <point key="canvasLocation" x="753.62318840579712" y="41.517857142857139"/>
         </scene>
         <!--Auth-->
         <scene sceneID="KZj-q4-v5Q">
